--- a/bankaccount/src/main/resources/bootstrap.yml
+++ b/bankaccount/src/main/resources/bootstrap.yml
@@ -13,6 +13,22 @@ spring:
 #      matching-strategy: ant_path_matcher
 
 
+resilience4j:
+  circuitbreaker.:
+    instances:
+      saveAccountCB:
+        register-health-indicator: true
+        sliding-window-type: count_based
+        sliding-window-size: 5
+        failure-rate-threshold: 40
+        slow-call-rate-threshold: 40
+        permitted-number-of-calls-in-half-open-state: 1
+        max-wait-duration-in-half-open-state: 10s
+        wait-duration-in-open-state: 10s
+        slow-call-duration-threshold: 2s
+        writable-stack-trace-enabled: true
+        automatic-transition-from-open-to-half-open-enabled: true
+
 
 
 
